# auto-apply

./: .gitignore  alembic.ini  approve.py  docker-compose.yml  pyproject.toml  report.py
alembic/: env.py
alembic/versions/: aeeb5da16326_initial_tables.py
dashboard/: package-lock.json  package.json
dashboard/app/: page.tsx
src/agent/: filler.py  hitl.py  models.py  runner.py  vision.py
src/analytics/: logger.py
src/api/: main.py
src/api/routes/: __init__.py  applications.py  jobs.py  stats.py
src/database/: config.py  models.py
src/generator/: renderer.py
src/generator/templates/: resume.html
src/intelligence/: engine.py  graph.py  models.py  prompts.py  runner.py
src/scout/: browser.py  linkedin.py
