[project]
name = "aajas"
version = "0.1.0"
description = "Agentic Autonomous Job Application System"
authors = [
    {name = "Margulan Baizhakyp", email = "your@email.com"},
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "playwright>=1.41.0",
    "langgraph>=0.0.10",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.1",
    "openai>=1.10.0",
    "anthropic>=0.15.0",
    "jinja2>=3.1.3",
    "weasyprint>=60.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "arq>=0.25.0",
    "pgvector>=0.2.0",
    "beautifulsoup4>=4.12.3",
    "fake-useragent>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.isort]
profile = "black"
line_length = 120
